fix auth bug, implemented inventory edit
